--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ button {
     width: 140px;
 }
 
-The Modal (background) .modal {
+/* The Modal (background) */
+.modal {
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -60,6 +61,7 @@ The Modal (background) .modal {
     /* Black w/ opacity */
 }
 
+/* Modal Content */
 .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -68,6 +70,7 @@ The Modal (background) .modal {
     width: 80%;
 }
 
+/* The Close Button */
 .close {
     color: #aaaaaa;
     float: right;
@@ -80,10 +83,4 @@ The Modal (background) .modal {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-}
-
-.game-status {
-    background-color: fuchsia;
-    color: white;
-    z-index: 9999999;
 }
