--- a/style.css
+++ b/style.css
@@ -25,68 +25,62 @@ body {
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:focus,
+.close:hover {
     color: #000;
-    text-decoration: none;
     cursor: pointer;
+    text-decoration: none;    
 }
 
 .game--container {
     display: none;
     grid-template-columns: repeat(3, auto);
-    width: 306px;
     margin: 50px auto;
+    width: 306px;    
+}
+
+.game-restart,
+.endGameButton {
+    display: none;
 }
 
 #inputsContainer {
     display: grid;
-    margin: auto;
-    width: 450px;
+    margin: auto;    
     margin-top: 40px;
     text-align: center;
+    width: 450px;
 }
 
 /* The Modal (background) */
 .modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    padding-top: 100px;
-    /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
     /* Black w/ opacity */
+    display: none;
+    height: 100%;
+    /* Full height */
+    left: 0;
+    overflow: auto;
+    /* Enable scroll if needed */
+    position: fixed;
+    /* Stay in place */
+    padding-top: 100px;
+    /* Location of the box */
+    top: 0;
+    width: 100%; 
+    z-index: 1;
+    /* Sit on top */
 }
 
 /* Modal Content */
 .modal-content {
     background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
     border: 1px solid #888;
+    margin: auto;
+    padding: 20px;    
     width: 80%;
-}
-
-
-
-
-
-.game-restart,
-.endGameButton {
-    display: none;
 }
 
 section {
